2010-01-14  Miklos Szeredi <miklos@szeredi.hu>

	* Fix compile error on FreeBSD.  Patch by Jay Sullivan

2009-12-17  Miklos Szeredi <miklos@szeredi.hu>

	* Use '--no-canonicalize' option of mount(8) (available in
	util-linux-ng version 2.17 or greater) to avoid calling
	readling(2) on the newly mounted filesystem before the mount
	procedure is finished.  This has caused a deadlock if "audit" was
	enabled in the kernel.  Also use '--no-canonicalize' for umount to
	avoid touching the mounted filesystem.

2009-09-11  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.1

2009-08-25  Miklos Szeredi <miklos@szeredi.hu>

	* Fix missing versioned symbol fuse_get_context@FUSE_2.2

2009-08-18  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.0

2009-08-18  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing fuse_session_data to versionscript

	* Make sure all global symbols are prefixed with "fuse_" or "cuse_"

2009-07-16  Miklos Szeredi <miklos@szeredi.hu>

	* Clarify how the protocol version should be negotiated between
	kernel and userspace.  Notably libfuse didn't correctly handle the
	case when the supported major versions didn't match

	* Add missing pthread link for libulockmgr.  Patch by  Petr Salinger

2009-07-02  Miklos Szeredi <miklos@szeredi.hu>

	* The context is extended with a 'umask' field.  The umask is sent
	for mknod, mkdir and create requests by linux kernel version
	2.6.31 or later, otherwise the umask is set to zero.  Also
	introduce a new feature flag: FUSE_CAP_DONT_MASK.  If the kernel
	supports this feature, then this flag will be set in conn->capable
	in the ->init() method.  If the filesystem sets this flag in in
	conn->want, then the create modes will not be masked.

	* Add low level interfaces for lookup cache and attribute
	invalidation.  This feature is available in linux kernels 2.6.31
	or later.  Patch by John Muir

	* Kernel interface version is now 7.12

	* fusermount: Do not silently ignore command line arguments.