@@ -1,3 +1,11 @@
+2010-01-21  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix race if two "fusermount -u" instances are run in parallel.
+	Reported by Dan Rosenberg
+
+	* Make sure that the path to be unmounted doesn't refer to a
+	symlink
+
 2010-01-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix compile error on FreeBSD.  Patch by Jay Sullivan
